# mtaftools

./: .gitignore  BUILD_INSTRUCTIONS.MD  README.md  pyproject.toml
src/mtaftools/: __init__.py  __main__.py  cli.py  custom_types.py  decoder.py  encoder.py  frame.py  header.py  progress.py  tables.py  utils.py  wavcheck.py
