[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mtaftools"
version = "0.2.1"
description = "Tools for encoding and decoding Metal Gear Solid MTAF audio"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Fenway Powers" }
]

requires-python = ">=3.9"
dependencies = []


[project.scripts]
mtaftools = "mtaftools.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
